@@ -1,5 +1,7 @@
 {{$NEXT}}
    - upgraded dependency for Template::Perlish (no STDOUT clobbering)
+   - documented "value" in parse_by_format
+   - added tap type `bucket`
 
 0.730  2016-05-03 22:08:39 CEST
    - added note about workaround in documentation for Parser
